# symformer

./: .gitignore  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
notebooks/: symformer-playground.ipynb
symformer/: evaluate.py  evaluate_benchmark.py  generate_video.py  predict.py  train.py  utils.py
symformer/dataset/utils/: _common.py
symformer/model/: callback_metrics.py  runner.py
